<resources>
	<string name="app_name">GW2 Steve</string>
	<string name="action_settings">Settings</string>
	<string name="title_activity_main">MainActivity</string>

	<string name="navigation_drawer_open">Open navigation drawer</string>
	<string name="navigation_drawer_close">Close navigation drawer</string>

	<!--Navigation Bar-->
	<string name="nav_accounts">Steve</string>
	<string name="nav_search">Search Wiki</string>
	<string name="nav_str_b">VAULT</string>
	<string name="nav_str_b1">Storage</string>
	<string name="nav_str_b2">Wallet</string>
	<string name="nav_str_b3">Inventory</string>
	<string name="nav_str_b4">Material Storage</string>
	<string name="nav_str_tp">TRADING POST</string>
	<string name="nav_str_tp1">Listing</string>
	<string name="nav_str_tp2">Watching</string>
	<string name="nav_str_tr">TRACKING</string>
	<string name="nav_str_tr1">Dungeon</string>
	<string name="nav_str_tr2">Boss Timer</string>

	<!--Fragment Wiki-->
	<string name="action_back">Back</string>
	<string name="action_forward">Forward</string>
	<string name="action_search">Search</string>
	<string name="progress_text">Loading, please wait…</string>

	<!--Fragment Storage-->
	<string name="storage_img_desc">Image of the Item</string>

	<!--Dialog Add AccountInfo-->
	<string name="dialog_add_title_str">Add New Account</string>
	<string name="dialog_add_input_hint">GW2 API Key</string>
	<string name="dialog_add_confirm">Add</string>
	<string name="dialog_add_cancel">Cancel</string>
	<string name="dialog_add_qr">Scan QR Code</string>
	<string name="dialog_loading">Creating Account…</string>

	<!--Dialog AccountInfo Detail-->
	<string name="dialog_detail_api_title_str">API</string>
	<string name="dialog_detail_world_title_str">Server</string>
	<string name="dialog_detail_access_title_str">Access</string>
	<string name="dialog_detail_ok">OK</string>

	<string name="dialog_prompt_title">No Account Present</string>
	<string name="dialog_prompt_content">Do you want to register a new account?</string>

	<string name="wallet_currency_img1">Gold</string>
	<string name="wallet_currency_img2">Silver</string>
	<string name="wallet_currency_img3">Currency</string>

	<string name="dialog_select_image">Dropdown</string>
	<string name="dialog_select_character_title">Select Characters</string>
	<string name="dialog_select_account_title">Select Accounts</string>
</resources>
