<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

		<item android:title="@string/nav_str_b">
			<menu>
				<group android:checkableBehavior="single">
					<item
						android:id="@+id/nav_wallet"
						android:title="@string/nav_str_b2"/>
					<item android:id="@+id/nav_bank"
					      android:title="@string/nav_str_b1"/>
					<item android:id="@+id/nav_inventory"
				        android:title="@string/nav_str_b3"/>
				</group>
			</menu>
		</item>

		<item android:title="@string/nav_str_tp">
			<menu>
				<group android:checkableBehavior="single">
					<item android:id="@+id/nav_listing"
					      android:title="@string/nav_str_tp1"/>
					<item android:id="@+id/nav_watch"
					      android:title="@string/nav_str_tp2"/>
				</group>
			</menu>
		</item>

		<item android:title="@string/nav_str_tr">
			<menu>
				<group android:checkableBehavior="single">
					<item android:id="@+id/nav_dungeon"
					      android:title="@string/nav_str_tr1"/>
					<item android:id="@+id/nav_boss"
					      android:title="@string/nav_str_tr2"/>
				</group>
			</menu>
		</item>

		<item
			android:id="@+id/nav_setting"
			android:title="@string/action_settings"
			/>

		<!--<item
			android:id="@+id/nav_camera"
			android:icon="@drawable/ic_menu_camera"
			android:title="Import"/>-->
</menu>
